feat: loading page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app">
-      <div class="loading-container">
+      <div class="loading-container bg-cool-gray-800">
         <div id="loadingLogo" class="loading-svg"></div>
         <div class="loading-spin__container">
           <div class="loading-spin">
